# RAG_101

./: Multi_agentSystem_CustomerSupport.ipynb
RAG/: .gitignore  app.js  package-lock.json  package.json
RAG/venv_rag/: .env  pyvenv.cfg
automate_customer_support/: README.md  pyproject.toml
automate_customer_support/src/automate_customer_support/: crew.py  main.py
automate_customer_support/src/automate_customer_support/config/: agents.yaml  tasks.yaml
automate_customer_support/src/automate_customer_support/tools/: custom_tool.py
automated_article_writer/: MAS_research_write_articles.ipynb  README.md  pyproject.toml  report.md
automated_article_writer/src/automated_article_writer/: crew.py  main.py
automated_article_writer/src/automated_article_writer/config/: agents.yaml  tasks.yaml
nutricoach/: .gitignore  README.md  app.py  multimodel_queries.py
nutricoach/nutriVenv/: pyvenv.cfg
nutricoach/src/: crew.py
