[project]
name = "automated_article_writer"
version = "0.1.0"
description = "automated_Article_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
automated_article_writer = "automated_article_writer.main:run"
run_crew = "automated_article_writer.main:run"
train = "automated_article_writer.main:train"
replay = "automated_article_writer.main:replay"
test = "automated_article_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
